# haskell-first-principles

./: LICENSE  README.md
chapter12/: Either.hs  Maybe.hs  MkWord.hs  Nat.hs  String.hs  Tree.hs  Unfolds.hs  chapter_exercises
chapter13/: Ciphers.hs  Palindrome.hs  Person.hs  exercise1
chapter13/hangman/: hangman.cabal
chapter13/hangman/src/: Main.hs
chapter14/: Ciphers.hs  Fool.hs  Idempotence.hs  QuickCheckHspec.hs  SquareIdentity.hs
chapter14/addition/: Addition.hs  addition.cabal
chapter14/hangman/: hangman.cabal
chapter14/hangman/src/: Hangman.hs  Main.hs
chapter14/hangman/tests/: tests.hs
chapter14/wordnumber/: WordNumber.hs
chapter15/: Assoc.hs  BoolConj.hs  BoolDisj.hs  Combine.hs  Comp.hs  Four.hs  Id.hs  Identity.hs  Mad.hs  Mem.hs  Optional.hs  OptionalWrapper.hs  Or.hs  Three.hs  Trivial.hs  Two.hs  Validation.hs
chapter16/: HeavyLifting.hs  Possibly.hs  Sum.hs  chapter_exercises  exercise1
chapter16/func/: AnotherFour.hs  AnotherThree.hs  Check.hs  Four.hs  Identity.hs  Pair.hs  Three.hs  Trivial.hs  Two.hs
chapter16/instances/: EvilGoateeConst.hs  Flip.hs  GoatLord.hs  IgnoreOne.hs  K.hs  LiftItOut.hs  List.hs  Notorious.hs  Parappa.hs  Quant.hs  TalkToMe.hs
chapter16/rearrangement/: Company.hs  More.hs  Sum.hs
chapter17/: Constant.hs  Fixer.hs  Identity.hs  List.hs  TypeSpecialisation.hs  Validation.hs  ZipList.hs
chapter17/instances/: AnotherFour.hs  AnotherThree.hs  Combinations.hs  Four.hs  Pair.hs  Three.hs  Two.hs
chapter17/lookups/: A.hs  B.hs  C.hs  D.hs
chapter18/: Fun.hs  Sum.hs
chapter18/instances/: Identity.hs  List.hs  Nope.hs  PhhhbbtttEither.hs
chapter19/shawty/: shawty.cabal
chapter19/shawty/src/: Main.hs
chapter20/instances/: AnotherFour.hs  AnotherThree.hs  Constant.hs  FilterF.hs  Three.hs  Two.hs
chapter21/: Big.hs  Bigger.hs  Constant.hs  Identity.hs  List.hs  Maybe.hs  Pair.hs  SkiFree.hs  Three.hs  Tree.hs
chapter22/: Ask.hs  Asks.hs  Composed.hs  MyLiftA2.hs  Name.hs  Reader.hs  ReaderPractice.hs
chapter22/shawty/: shawty.cabal
chapter22/shawty/app/: Main.hs
chapter23/: FizzBuzz.hs  RandomExample.hs  RandomExample2.hs  State.hs
chapter24/: DecimalOrFraction.hs  IPAddress.hs  LearnParsers.hs  ParseIntegerEOF.hs  PhoneNumber.hs  PositiveInteger.hs  SemVer.hs
chapter25/: Bifunctor.hs  Compose.hs
chapter26/: EitherT.hs  FixCode.hs  HitCounter.hs  Lift.hs  MaybeT.hs  MorraPVC  MorraPVC.hs  MorraPVP  MorraPVP.hs  OuterInner.hs  ReaderMaybe.hs  ReaderT.hs  StateT.hs  WriteCode.hs
chapter27/: MakeBottom.hs  bottom  exercise_evaluate  sprint_output
chapter28/: DList.hs  Queue.hs  benchmark_map_set.hs  benchmark_vector.hs
chapter29/: Ini.hs  cipher.hs
chapter31/: chapter_exercises
chapter31/fingerd/: finger.db  fingerd.cabal
chapter31/fingerd/src/: Client.hs  Debug.hs  Main.hs  User.hs
