name:                shawty
version:             0.1.0.0
synopsis:            URI shortener
homepage:            https://github.com/
license:             BSD3
license-file:        LICENSE
author:              Pang Luo
maintainer:          Pang Luo
copyright:           2018 Pang Luo
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable shawty
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       bytestring,
                       hedis,
                       network-uri,
                       scotty,
                       transformers,
                       random,
                       text
