name:                shawty
version:             0.1.0.0
synopsis:            URI shortener
description:         Please see README.md
homepage:            https://github.com/
license:             BSD3
license-file:        LICENSE
author:              Pang Luo
maintainer:          pang.luo@unswalumni.com
copyright:           2019 Pang Luo
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable shawty
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded
  default-language:    Haskell2010
  build-depends:       base
                     , bytestring
                     , hedis
                     , mtl
                     , network-uri
                     , random
                     , scotty
                     , semigroups
                     , text
                     , transformers
