name:                fingerd
version:             0.1.0.0
synopsis:            Simple project template
description:         Please see README.md
homepage:            https://github.com/githubuser/fingerd#readme
license:             BSD3
license-file:        LICENSE
author:              Pang Luo
maintainer:          pang.luo@unswalumni.com
copyright:           2019 Pang Luo
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable debug
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             Debug.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , network

executable user
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             User.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , sqlite-simple
                     , text

executable client
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             Client.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , network
                     , text
                     , bytestring

executable fingerd
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , network
                     , raw-strings-qq
                     , sqlite-simple
                     , text
